// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should render transparent loader when loading is false 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-busy="false"
        class="fixed inset-0 flex justify-center items-center my-20 opacity-0"
        role="alert"
      >
        <div
          class="flex"
        >
          <div
            class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce"
          />
          <div
            class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce200"
          />
          <div
            class="h-5 w-5 bg-yellow-400 rounded-full animate-bounce400"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-busy="false"
      class="fixed inset-0 flex justify-center items-center my-20 opacity-0"
      role="alert"
    >
      <div
        class="flex"
      >
        <div
          class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce"
        />
        <div
          class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce200"
        />
        <div
          class="h-5 w-5 bg-yellow-400 rounded-full animate-bounce400"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`should show loader when loading 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        aria-busy="true"
        class="fixed inset-0 flex justify-center items-center my-20 opacity-100"
        role="alert"
      >
        <div
          class="flex"
        >
          <div
            class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce"
          />
          <div
            class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce200"
          />
          <div
            class="h-5 w-5 bg-yellow-400 rounded-full animate-bounce400"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      aria-busy="true"
      class="fixed inset-0 flex justify-center items-center my-20 opacity-100"
      role="alert"
    >
      <div
        class="flex"
      >
        <div
          class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce"
        />
        <div
          class="h-5 w-5 bg-yellow-400 rounded-full mr-1 animate-bounce200"
        />
        <div
          class="h-5 w-5 bg-yellow-400 rounded-full animate-bounce400"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
